# StrukturyDanych_01

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ListaJednokierunkowaWyniki.txt  Makefile  cmake_install.cmake  lista_dwubiegunowa_tail.hpp  lista_jednokierunkowa.hpp  lista_rotujaca.hpp  main.cpp  resoult
include/: Tablica_Dynamiczna.hpp  lista_dwubiegunowa.hpp  lista_jednokierunkowa.hpp
